--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "devDependencies": {
         "angular-mocks": "~1.3.14",
         "grunt": "~0.4.4",
-        "grunt-contrib-concat": "~0.4.",
+        "grunt-contrib-concat": "~0.4.0",
         "grunt-contrib-jasmine": "~0.8.2",
         "grunt-contrib-jshint": "~0.8.0",
         "grunt-contrib-uglify": "~0.3.2"
