--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
         "angular-mocks": "~1.3.14",
         "grunt": "~0.4.4",
         "grunt-contrib-concat": "~0.4.0",
+        "grunt-contrib-copy": "~0.8.0",
         "grunt-contrib-jasmine": "~0.8.2",
         "grunt-contrib-jshint": "~0.8.0",
-        "grunt-contrib-uglify": "~0.3.2"
+        "grunt-contrib-uglify": "~0.3.2",
+        "grunt-html2js": "~0.3.0",
+        "node-markdown": "~0.1.1"
     },
     "dependencies": {
         "angular": "~1.3.15",
