--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "grunt-contrib-jasmine": "~0.8.2",
         "grunt-contrib-jshint": "~0.8.0",
         "grunt-contrib-uglify": "~0.3.2",
+        "grunt-contrib-watch": "~0.6.1",
         "grunt-html2js": "~0.3.0",
         "node-markdown": "~0.1.1"
     },
