--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "angular": "~1.3.15",
+        "angular-bootstrap": "~0.12.0",
         "angular-cookies": "~1.3.15",
         "jsTimezoneDetect": "https://bitbucket.org/pellepim/jstimezonedetect/get/default.tar.gz"
     },
