--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "proso-apps-js",
     "version": "1.0.0",
     "devDependencies": {
+        "angulartics": "~0.17.2",
         "angular-mocks": "~1.3.14",
         "grunt": "~0.4.4",
         "grunt-contrib-concat": "~0.4.0",
