--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-    "name": "proso-apps-js",
-    "version": "1.0.0",
-    "devDependencies": {
-        "angulartics": "~0.17.2",
-        "angular-mocks": "~1.3.14",
-        "grunt": "~0.4.4",
-        "grunt-contrib-concat": "~0.4.0",
-        "grunt-contrib-copy": "~0.8.0",
-        "grunt-contrib-jasmine": "~0.8.2",
-        "grunt-contrib-jshint": "~0.8.0",
-        "grunt-contrib-uglify": "~0.3.2",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-html2js": "~0.3.0",
-        "grunt-shell": "~1.1.2",
-        "node-markdown": "~0.1.1"
-    },
-    "dependencies": {
-        "angular": "~1.3.15",
-        "angular-bootstrap": "~0.12.0",
-        "angular-cookies": "~1.3.15",
-        "jsTimezoneDetect": "https://bitbucket.org/pellepim/jstimezonedetect/get/default.tar.gz"
-    },
-    "description": "PROSO apps -- Javascript",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/adaptive-learning/proso-apps-js.git"
-    },
-    "license": "MIT"
+  "name": "proso-apps-js",
+  "version": "1.0.0",
+  "devDependencies": {
+    "angulartics": "~0.17.2",
+    "angular-mocks": "~1.3.14",
+    "grunt": "~0.4.4",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-jasmine": "~0.8.2",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-html2js": "~0.3.0",
+    "grunt-shell": "~1.1.2",
+    "node-markdown": "~0.1.1",
+    "grunt-angular-gettext": "~2.1.0"
+  },
+  "dependencies": {
+    "angular": "~1.3.15",
+    "angular-bootstrap": "~0.12.0",
+    "angular-cookies": "~1.3.15",
+    "jsTimezoneDetect": "https://bitbucket.org/pellepim/jstimezonedetect/get/default.tar.gz"
+  },
+  "description": "PROSO apps -- Javascript",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adaptive-learning/proso-apps-js.git"
+  },
+  "license": "MIT"
 }
